list view resize and contact data push

--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@
 	opacity: 1;
 }
 
-.tablecontainer .row .col-2{
+.tablecontainer .row .col-2,.tablecontainer .row .col-3,.tablecontainer .row .col-1{
 	margin: 10px 0px;
 }
 .tbheader{
