--- a/css/style2.css
+++ b/css/style2.css
@@ -1,8 +1,17 @@
+body{
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;;
+}
+
 #mainbody{
-	background-color: white;
+	background-color: #1F2739;
 	height: 100%;
 	width: 100%;
 	margin: 0px auto;
+}
+
+.topcontainer{
+	background-color: white;
+	max-width: 100%;
 }
 
 #leftbody{
@@ -75,18 +84,24 @@
 
 /** view.html page **/
 #maincontainer{
-	background: #EBF3FF 0% 0% no-repeat padding-box;
-	box-shadow: 0px 1px 18px #40404048;
+	background: #1F2739 0% 0% no-repeat padding-box;
+	/*box-shadow: 0px 1px 18px #40404048;*/
 	opacity: 1;
 	width: 1000px;
-	margin: 5px auto;
+	margin: 0px auto 5px auto;
 	padding-bottom: 20px;
 }
 
 #toprow{
+	background-color: #afc1ed;
 	background-color: white;
 	/*padding: 18px 20px 22px 20px;*/
 	height: 57px;
+}
+
+.newbar{
+	width: 1000px;
+	margin: 0px auto;
 }
 
 #logo2{
@@ -96,7 +111,7 @@
 
 #logotext2{
 	text-align: left;
-	font-size: 15px ;
+	font-size: 20px ;
 	font-weight: bold;
 	font-family : Merriweather;
 	letter-spacing: 0;
@@ -124,7 +139,7 @@
 	color: #383838;
 	font-weight: bold;
 	font-size: 17px;
-	font-family: Proxima Nova;
+	/*font-family: Proxima Nova;*/
 }
 
 .profileimage{
@@ -134,7 +149,7 @@
 }
 
 .mt11{
-	margin-top: 11px;
+	margin-top: 17px;
 }
 .mt14{
 	margin-top: 14px;
@@ -160,26 +175,26 @@
 	padding-top: 11px;
 	font-weight: 500 ;
 	font-size: 15px; 
-	font-family: Proxima Nova;
+	/*font-family: Proxima Nova;*/
 	letter-spacing: 0;
-	color: #40403E;
+	color: white;
 	opacity: 1;
 }
 
 #currentoption{
-	border-bottom: 1px solid Black;
+	border-bottom: 1px solid white;
 	padding-bottom: 4px;
 }
 
 .downarrow{
-	width: 10px;
-	height: 6px;
+	width: 21px;
+	height: 21px;
 }
 
 /**box**/
 #icon{
 	float:right; 
-	margin-right: 20px;
+	margin-right: 15px;
 	text-align: left;
 }
 
@@ -211,7 +226,7 @@
 	height: 33px;
 	text-align: left;
 	font-size: 14px;
-	font-family: Proxima Nova;
+	/*font-family: Proxima Nova;*/
 	letter-spacing: 0;
 	color: #222222;
 	opacity: 1;
@@ -301,7 +316,7 @@
 	text-align: left;
 	font-weight: lighter;
 	font-size: 15px;
-	font-family: Proxima Nova;
+	/*font-family: Proxima Nova;*/
 	letter-spacing: 0;
 	color: #222222;
 	opacity: 1;
@@ -328,7 +343,7 @@
 }
 
 .opacity50{
-	opacity: .5;
+	opacity: .1;
 }
 
 .rangespan{
@@ -350,9 +365,10 @@
 	text-align: center;
 	font-weight: Regular 
 	font-size: 14px;
-	font-family: Proxima Nova;
+	/*font-family: Proxima Nova;*/
 	letter-spacing: 0;
 	color: #5A5050;
+	color: #897a7a;
 	opacity: 1;
 }
 
@@ -413,7 +429,7 @@
 	text-align: left;
 	font-weight: Medium;
 	font-size: 15px;
-	font-family: Proxima Nova;
+	/*font-family: Proxima Nova;*/
 	letter-spacing: 0;
 	color: #777777;
 	opacity: 1;
@@ -423,7 +439,7 @@
 	text-align: left;
 	font-weight: Regular;
 	font-size : 20px;
-	font-family: Proxima Nova;
+	/*font-family: Proxima Nova;*/
 	letter-spacing: 0;
 	color: #222222;
 	opacity: 1;
@@ -443,7 +459,7 @@
 	float: right;
 	font-weight: Regular;
 	font-size: 14px;
-	font-family: Proxima Nova;
+	/*font-family: Proxima Nova;*/
 	letter-spacing: 0;
 	color: #BB4B4C;
 	opacity: 1;
@@ -464,7 +480,7 @@
 	text-align: left;
 	font-weight: bold;
 	font-size: 16px;
-	font-family: Proxima Nova;
+	/*font-family: Proxima Nova;*/
 	letter-spacing: 0;
 	color: #272727;
 	opacity: 1;
@@ -483,7 +499,7 @@
 	text-align: left;
 	font-weight: medium; 
 	font-size: 18px;
-	font-family: Proxima Nova;
+	/*font-family: Proxima Nova;*/
 	letter-spacing: 0;
 	color: #6A6E7C;
 	opacity: 1;
@@ -517,36 +533,47 @@
 }
 
 .rejectbtn{
-	width: 66px;
-	height: 33px;
+	width: 95px;
+	height: 45px;
 	border: 1px solid #B1BED5;
 	border-radius: 5px;
+	border: none;
 	opacity: 1;
 	text-align: left;
 	font-weight: 400 ;
-	font-size: 14px;
-	font-family: Proxima Nova;
+	font-size: 16px;
+	/*font-family: Proxima Nova;*/
 	background-color: #EBF3FF;
+	background: transparent linear-gradient(360deg, #EBF3FF 0%, #d4e4fc 100%) 0% 0% no-repeat padding-box;
 	letter-spacing: 0;
 	color: #222222;
 	opacity: 1;
 	text-align: center;
 }
 
+.rejectbtn:hover{
+	background: transparent linear-gradient(180deg, #EBF3FF 0%, #d4e4fc 100%) 0% 0% no-repeat padding-box;
+}
+
 .approvebtn{
-	width: 81px;
-	height: 33px;
+	width: 95px;
+	height: 45px;
 	background: transparent linear-gradient(360deg, #ED8049 0%, #DC6427 100%) 0% 0% no-repeat padding-box;
 	border-radius: 5px;
 	opacity: 1;
 	text-align: left;
 	font-weight: 400 ;
-	font-size: 14px;
-	font-family:  Proxima Nova;
+	font-size: 16px;
+	border: none;
+	/*font-family:  Proxima Nova;*/
 	letter-spacing: 0;
 	color: #FFFFFF;
 	opacity: 1;
 	text-align: center;
+}
+
+.approvebtn:hover{
+	background: transparent linear-gradient(180deg, #ED8049 0%, #DC6427 100%) 0% 0% no-repeat padding-box;
 }
 
 .upload-btn-wrapper {
@@ -577,7 +604,7 @@
 	text-align: left;
 	font-weight: medium; 
 	font-size: 18px;
-	font-family: Proxima Nova;
+	/*font-family: Proxima Nova;*/
 	letter-spacing: 0;
 	color: #6A6E7C;
 	opacity: 1;
@@ -588,7 +615,7 @@
 	padding-left: 20px;
 	overflow-x: hidden;
 	font-size: 15px;
-	font-family: Proxima Nova;
+	/*font-family: Proxima Nova;*/
 	letter-spacing: 0;
 	color: #222222;
 }
@@ -758,4 +785,147 @@
 		height: 29px;
 		width: 15px;
 	}
+}
+
+
+/*******/
+
+@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+
+body {
+  /*font-family: 'Open Sans', sans-serif;*/
+  font-weight: 300;
+  line-height: 1.42em;
+  color:#A7A1AE;
+  background-color:#1F2739;
+}
+
+h1 {
+  font-size:1em; 
+  font-weight: 300;
+  line-height:1em;
+  text-align: center;
+  color: #4DC3FA;
+}
+
+h2 {
+  font-size:1em; 
+  font-weight: 300;
+  text-align: center;
+  display: block;
+  line-height:1em;
+  padding-bottom: 2em;
+  color: #FB667A;
+}
+
+h2 a {
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #FB667A;
+  text-decoration: none;
+}
+
+.blue { color: #185875; }
+.yellow { color: #FFF842; }
+
+.tablecontainer2 th h1 {
+	  font-weight: bold;
+	  font-size: 1em;
+  text-align: left;
+  color: #185875;
+  color: #f9f7bd;
+}
+
+.tablecontainer2 td {
+	  font-weight: normal;
+	  font-size: 1em;
+  -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+	   -moz-box-shadow: 0 2px 2px -2px #0E1119;
+	        box-shadow: 0 2px 2px -2px #0E1119;
+}
+
+.tablecontainer2 {
+	  text-align: left;
+	  overflow: hidden;
+	  width: 100%;
+	  margin: 0 auto;
+  	display: table;
+  	padding: 0 0 8em 0;
+}
+
+.tablecontainer2 td, .tablecontainer2 th {
+	  padding-bottom: 2%;
+	  padding-top: 2%;
+  padding-left:2%;  
+}
+
+/* Background-color of the odd rows */
+.tablecontainer2 tr:nth-child(odd) {
+	  background-color: #323C50;
+}
+
+/* Background-color of the even rows */
+.tablecontainer2 tr:nth-child(even) {
+	  background-color: #2C3446;
+}
+
+.tablecontainer2 th {
+	  background-color: #1F2739;
+}
+
+.tablecontainer2 td:first-child { color: #FB667A; }
+
+.tablecontainer2 tr:hover {
+   background-color: #464A52;
+-webkit-box-shadow: 0 6px 6px -6px #0E1119;
+	   -moz-box-shadow: 0 6px 6px -6px #0E1119;
+	        box-shadow: 0 6px 6px -6px #0E1119;
+}
+
+.tablecontainer2 td:hover {
+  background-color: #FFF842;
+  color: #403E10;
+  box-shadow: #7F7C21 -1px 1px, #7F7C21 -2px 2px, #7F7C21 -3px 3px, #7F7C21 -4px 4px, #7F7C21 -5px 5px, #7F7C21 -6px 6px;
+  transform: translate3d(6px, -6px, 0);
+  
+  transition-delay: 0s;
+	  transition-duration: 0.4s;
+	  transition-property: all;
+  transition-timing-function: line;
+}
+
+
+.fromrec, .torec{
+	color: white;
+}
+
+th.name, td.name{
+	width: 215px;
+}
+
+th.phone, td.phone{
+	width: 125px;
+}
+
+th.email, td.email{
+	width: 240px;
+}
+
+th.street,td.street{
+	width: 135px;
+}
+
+th.region, td.region{
+	width: 175px;
+}
+
+#bgstrip{
+	height: 57px;
+	width: 100%;
+	display: block;
+	position: absolute;
+	z-index: -1000;
+	top: 0px;
+	left: 0px;
 }
