--- a/css/style2.css
+++ b/css/style2.css
@@ -122,13 +122,13 @@ body{
 .namediv{
 	border: 1px solid #d1d1d1;
 	border-radius: 15px;
-	padding: 3px;
+	padding: 7px 3px 10px 9px;
 }
 
 #topname{
-	text-align: left;
+	text-align: right;
 	vertical-align: middle;
-
+	margin-top: 14px;
 }
 
 #tophello{
@@ -153,6 +153,18 @@ body{
 	height: 30px;
 	width: 30px;
 	border-radius: 15px;
+}
+
+.svgout{
+	fill: #b5b3b3;
+}
+
+.logout{
+	cursor: pointer;
+}
+
+.logouticon:hover svg path{
+	fill: black;
 }
 
 .mt11{
@@ -279,7 +291,7 @@ body{
 
 .menuselected{
 	background: #5F67FB 0% 0% no-repeat padding-box;
-	border-radius: 1px;
+	border-radius: 2px;
 	color: #FFFFFF;
 }
 
