--- a/css/style2.css
+++ b/css/style2.css
@@ -34,6 +34,19 @@ body{
 	height: 22.7px;
 }
 
+#logoimg{
+	display: block;
+	position: relative;
+	float: left;
+	margin-top: -5px;
+}
+
+#logotext2{
+	display: block;
+	position: relative;
+	float: left;
+}
+
 #logotext2{
 	text-align: left;
 	font-size: 20px ;
